added hero-picture and hero-content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Travel Project - Finland</title>
   </head>
   <body>
-    <h1>Welcome to Finland</h1>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+
+        <h1>Welcome to Finland</h1>
+
+        <h2>The happiest country in the world</h2>
+
+        <a href="#more">Learn more</a>
+      </header>
+      <footer>
+        This project was coded by Anne Gleichmann and is
+        <a
+          href="https://github.com/annegleichmann/shecodes-travel-project"
+          target="_blank"
+          >open sourced</a
+        >
+      </footer>
+    </div>
   </body>
 </html>
