--- a/index.html
+++ b/index.html
@@ -18,12 +18,56 @@
         <a href="#more">Learn more</a>
       </header>
       <footer>
-        This project was coded by Anne Gleichmann and is
-        <a
-          href="https://github.com/annegleichmann/shecodes-travel-project"
-          target="_blank"
-          >open sourced</a
-        >
+        <section class="grid">
+          <div>
+            <h3>More about Finland</h3>
+
+            <ul>
+              <li>
+                <a href="https://www.visitfinland.com/en/" target="_blank"
+                  >About Finland</a
+                >
+              </li>
+
+              <li>
+                <a href="https://www.finnair.com/" target="_blank"
+                  >Get to Finland</a
+                >
+              </li>
+
+              <li>
+                <a href="https://www.vr.fi/en" target="_blank"
+                  >Getting around in Finland</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div>
+            <h3>About Me</h3>
+            <p>
+              Hi! My name is Anne and I love Finland so much! That's why I
+              studied the Finnish language and culture and lived there for 6
+              years...and would love to move back to the happiest country in the
+              world.
+            </p>
+          </div>
+
+          <div>
+            <h3>About this website</h3>
+            <p>
+              I created this page as part of a project for SheCodes Responsive
+              to develop my coding skills. Also, I take every opportunity to
+              combine coding with topics (any topics) about Finland.
+            </p>
+          </div>
+          This project was coded by Anne Gleichmann and is
+          <a
+            href="https://github.com/annegleichmann/shecodes-travel-project"
+            target="_blank"
+            >open sourced</a
+          >
+        </section>
       </footer>
     </div>
   </body>
