styled the footer

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <h3>About Me</h3>
             <p>
               Hi! My name is Anne and I love Finland so much! That's why I
-              studied the Finnish language and culture and lived there for 6
-              years...and would love to move back to the happiest country in the
-              world.
+              studied Fennistic (the Finnish language and culture) and lived
+              there for 6 years...and would love to move back to the happiest
+              country in the world.
             </p>
           </div>
 
