added content to the main section and styled it with css

--- a/index.html
+++ b/index.html
@@ -17,6 +17,35 @@
 
         <a href="#more">Learn more</a>
       </header>
+
+      <main>
+        <section class="grid grid-2-columns">
+          <div>
+            <img
+              src="images/Helsinki.jpg"
+              alt="Helsinki Tuomiokirkko"
+              class="img-responsive"
+            />
+          </div>
+          <div>
+            <h2>Get to know Helsinki</h2>
+            <h3>Start with the capital</h3>
+            <p>
+              Marvel at the city's world-renowned architecture, design, and
+              museums. Visit the free public events co-created by the locals,
+              such as Helsinki Day on the 12th of June. Taste the clean palette
+              of Finnish cuisine at some of the best restaurants in the country.
+            </p>
+            <p>
+              The Helsinki region around Finland's capital is a green, spacious,
+              and vibrant region with world-class architecture and design,
+              one-of-a-kind public sauna culture, unique Nordic restaurants, and
+              picturesque villages and towns.
+            </p>
+          </div>
+        </section>
+      </main>
+
       <footer>
         <section class="grid">
           <div>
