added content to the main section and styled it

--- a/index.html
+++ b/index.html
@@ -44,10 +44,125 @@
             </p>
           </div>
         </section>
+        <section class="secondary">
+          <h2 class="text-center">Other Places to see</h2>
+          <h3 class="text-center">Explore these places</h3>
+
+          <div class="grid grid-3-columns">
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/Tampere.jpg"
+                  alt="Tampere"
+                  class="img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Tampere</h4>
+                <p>
+                  You found it, the hidden gem of Finland! Plan your visit to
+                  Tampere and its region and find yourself a new perspective in
+                  the most loved city of Finland.
+                </p>
+                <p>
+                  Numerous events, fascinating cultural experiences and soothing
+                  lake views to match the relaxed atmosphere makes the city very
+                  appealing all year round.
+                </p>
+                <p>
+                  Tampere is known for its stunning views, public saunas, quirky
+                  museums and family fun. Here are some tips to help you make
+                  the best of your trip to Tampere!
+                </p>
+                <div class="card-footer">
+                  <a
+                    href="https://visittampere.fi/en/"
+                    target="_blank"
+                    class="btn"
+                    >Learn more</a
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/Rovaniemi.jpg"
+                  alt="Rovaniemi"
+                  class="img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Rovaniemi</h4>
+                <p>
+                  Rovaniemi – The Official Hometown of Santa Claus ® “Experience
+                  a living story that will change you forever. Your magical
+                  journey here at Arctic Circle, Lapland, Finland is guided by
+                  the values of authenticity, giving, creativity and constant
+                  presence. It’s also your moment to meet Santa Claus at the
+                  Santa Claus Village any day of the year and write a chapter in
+                  your life’s story while exploring Rovaniemi area rich in
+                  history and curious details.”
+                </p>
+                <p>
+                  The Arctic nights of endless sunlight is followed by fresh
+                  autumn breeze and dark nights. Nature is preparing for winter
+                  at the Arctic Circle, we are enchanted by the changing colours
+                  of the season. Northern Lights and the Autumn Foliage are
+                  unforgettable phenomenas to be shared with friends and family.
+                </p>
+                <div class="card-footer">
+                  <a
+                    href="https://www.visitrovaniemi.fi/"
+                    target="_blank"
+                    class="btn"
+                    >Learn more</a
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/Turku.jpg"
+                  alt="Turku"
+                  class="img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Turku</h4>
+                <p>
+                  Once Finland’s capital, Turku has a long history, stretching
+                  back to the Middle Ages. But new life is now pulsing through
+                  its streets. Discover the young soul of this old city right
+                  here with Visit Turku. Find things to do, places to stay, and
+                  events to enjoy.
+                </p>
+                <p>
+                  Turku witnessed the launch of the Reformation and the nation’s
+                  written language, and until 1827, burnt to the ground at
+                  regular intervals. Learn more about the city’s history and
+                  culture, explore eco-friendly ways to get around, and find out
+                  how you can make the most of every season here.
+                </p>
+                <div class="card-footer">
+                  <a
+                    href="https://en.visitturku.fi/"
+                    target="_blank"
+                    class="btn"
+                    >Learn more</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer>
-        <section class="grid">
+        <section class="grid grid-3-columns-with-first-narrow">
           <div>
             <h3>More about Finland</h3>
 
