--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
           </div>
         </section>
         <div class="signature">
-          This project was coded by Anne Gleichmann and is
+          This project 🇫🇮 was coded by Anne Gleichmann and is
           <a
             href="https://github.com/annegleichmann/shecodes-travel-project"
             target="_blank"
